WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91215
[CSS Regions] Fix build for
bug 89000
https://bugs.webkit.org/show_bug.cgi?id=91215
Summary
[CSS Regions] Fix build for bug 89000
Andrei Bucur
Reported
2012-07-13 04:17:04 PDT
Unused variable left around and failed some builds.
Attachments
Patch
(1.76 KB, patch)
2012-07-13 04:20 PDT
,
Andrei Bucur
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Bucur
Comment 1
2012-07-13 04:20:15 PDT
Created
attachment 152213
[details]
Patch
Kentaro Hara
Comment 2
2012-07-13 04:32:01 PDT
Comment on
attachment 152213
[details]
Patch Looks OK!
WebKit Review Bot
Comment 3
2012-07-13 05:57:00 PDT
Comment on
attachment 152213
[details]
Patch Clearing flags on attachment: 152213 Committed
r122569
: <
http://trac.webkit.org/changeset/122569
>
WebKit Review Bot
Comment 4
2012-07-13 05:57:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug