[CSS Regions] Fix build for bug 89000 https://bugs.webkit.org/show_bug.cgi?id=91215

Patch by Andrei Bucur <abucur@adobe.com> on 2012-07-13
Reviewed by Kentaro Hara.

Remove the unused variable m_state that was a leftover from a previous version of the patch.

Tests: No new tests, build fix.

* dom/WebKitNamedFlow.cpp:
(WebCore::WebKitNamedFlow::WebKitNamedFlow):
* dom/WebKitNamedFlow.h:
(WebKitNamedFlow):

Canonical link: https://commits.webkit.org/109042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122569 268f45cc-cd09-0410-ab3c-d52691b4dbfc